@@ -1,3 +1,8 @@
+2006-12-04  Benoit Jacob <jacob@math.jussieu.fr>
+
+	* test/math.cpp: match the Test::Harness output format.
+	Geoff, did I get it right this time?
+
 2006-12-03  Benoit Jacob <jacob@math.jussieu.fr>
 
 	* src/math/vector3.h, src/math/matrix3x3.h,
